# darlang

./: .gitignore  CMakeLists.txt  README.md
doc/: basics.rst  conf.py  index.rst  introduction.rst  make.bat  quirks.rst  specialization.rst  types.rst
examples/: block.da  data.da  disjoint.da  euclid.da  euclidean.da  recursive_types.da  unbound.da
src/: ast.h  dac.cc  errors.h  intrinsics.cc  intrinsics.h  lexer.cc  lexer.h  logger.h  main.cc  parser.cc  parser.h
src/ast/: prettyprinter.h  types.h  util.h
src/backend/: llvm_backend.cc  llvm_backend.h  llvm_intrinsics.h  llvm_prelude.cc  llvm_prelude.h  llvm_symbol_namer.h  llvm_typer.cc  llvm_typer.h
src/parsing/: lexer.cc  lexer.h  parser.cc  parser.h
src/scoping/: scope_transform.cc  scope_transform.h
src/typing/: disjoint_solver.cc  disjoint_solver.h  function_solver.cc  function_solver.h  function_specializer.cc  function_specializer.h  intrinsics.cc  intrinsics.h  module_specializer.cc  module_specializer.h  primitive_solver.cc  primitive_solver.h  registry.h  solver.cc  solver.h  tuple_solver.cc  tuple_solver.h  tuple_solver_test.cc  type_transform.cc  type_transform.h  typeable.cc  typeable.h  types.h
src/util/: declaration_mapper.h  location.h  scoped_map.h
